# news-stream-analyzer

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
infra/grafana/dashboards/: pipeline.json
infra/grafana/provisioning/dashboards/: default.yml
infra/migrations/neo4j/: V001__create_constraints.cypher
infra/migrations/opensearch/: V001__create_raw_posts.json  V002__create_entities.json  V003__create_sentiments.json  V004__create_relations.json
infra/prometheus/: prometheus.yml
libs/common/: pyproject.toml
libs/common/src/news_common/: __init__.py  config.py  logging.py  metrics.py  mocks.py
libs/common/src/news_common/clients/: __init__.py  opensearch.py  redis_bus.py
libs/common/src/news_common/models/: __init__.py  entity.py  post.py  relation.py  sentiment.py
libs/common/src/news_common/repositories/: __init__.py  entities.py  graph.py  posts.py  relations.py  sentiments.py
scripts/: deploy.sh  eval_latency.py  eval_ner.py  eval_sentiment.py  eval_throughput.py  migrate.py  seed_mock.py
services/api_gateway/: Dockerfile  pyproject.toml
services/api_gateway/src/api_gateway/: app.py  deps.py
services/api_gateway/src/api_gateway/schemas/: responses.py
services/api_gateway/src/api_gateway/services/: entities.py  graph.py  locations.py  search.py  stats.py
services/api_gateway/src/api_gateway/views/: entities.py  graph.py  locations.py  search.py  stats.py
services/dashboard/: Dockerfile  pyproject.toml
services/dashboard/src/dashboard/: app.py
services/dashboard/src/dashboard/services/: api_client.py
services/dashboard/src/dashboard/views/: _labels.py  entities.py  graph.py  live.py  map.py  sankey.py  search.py  stats.py
services/graph_builder/: Dockerfile  pyproject.toml
services/graph_builder/src/graph_builder/: main.py  runner.py
services/graph_builder/src/graph_builder/services/: graph_writer.py
services/nlp_worker/: Dockerfile  pyproject.toml
services/nlp_worker/src/nlp_worker/: __main__.py  runner.py
services/nlp_worker/src/nlp_worker/clients/: wikidata.py  wikidata_cache.py
services/nlp_worker/src/nlp_worker/services/: linker.py  ner.py  pipeline.py  relations.py  sentiment.py
services/processor/: Dockerfile  pyproject.toml
services/processor/src/processor/: main.py  runner.py
services/processor/src/processor/repositories/: stream.py
services/processor/src/processor/services/: deduper.py  normalizer.py  pipeline.py
services/telegram_collector/: Dockerfile  pyproject.toml
services/telegram_collector/src/telegram_collector/: main.py  runner.py
services/telegram_collector/src/telegram_collector/clients/: telegram_api.py
services/telegram_collector/src/telegram_collector/services/: collector.py  mock_generator.py
services/vk_collector/: Dockerfile  pyproject.toml
services/vk_collector/src/vk_collector/: __main__.py  runner.py
services/vk_collector/src/vk_collector/clients/: exceptions.py  rate_limiter.py  token_pool.py  vk_api.py
services/vk_collector/src/vk_collector/repositories/: cursor.py  stream.py
services/vk_collector/src/vk_collector/services/: collector.py  mock_generator.py
tests/: conftest.py
tests/integration/: test_pipeline_smoke.py
tests/unit/: test_cursor.py  test_dedup.py  test_execute_code.py  test_graph_writer.py  test_normalize.py  test_relations.py  test_schemas.py  test_sentiment.py  test_token_pool.py  test_vk_client.py
