[project]
name = "news-stream-analyzer"
version = "0.1.0"
description = "Streaming news analysis pipeline for VK and Telegram"
requires-python = ">=3.11"
readme = "README.md"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "testcontainers[opensearch,redis,neo4j]>=4.7",
    "pre-commit>=4.6.0",
    "httpx>=0.27",
    "datasets>=2.20",
]

[tool.uv.workspace]
members = ["libs/*", "services/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",
    "RUF001", "RUF002", "RUF003",  # ambiguous Cyrillic chars — false positives in RU strings
    "B008",  # FastAPI uses Depends() in default args by design
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
