[project]
name = "news-common"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "redis>=5.0",
    "opensearch-py[async]>=2.6,<3.0",
    "neo4j>=5.22",
    "structlog>=24.1",
    "orjson>=3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/news_common"]
