[project]
name = "api-gateway"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "news-common",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[tool.uv.sources]
news-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_gateway"]
