[project]
name = "dashboard"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "news-common",
    "streamlit>=1.36",
    "streamlit-searchbox>=0.1.16",
    "streamlit-folium>=0.20",
    "folium>=0.17",
    "plotly>=5.22",
    "pandas>=2.2",
    "httpx>=0.27",
    "networkx>=3.3",
]

[tool.uv.sources]
news-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard"]
