[project]
name = "graph-builder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "news-common",
    "neo4j>=5.22",
]

[tool.uv.sources]
news-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graph_builder"]
