[project]
name = "nlp-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "news-common",
    "natasha>=1.6",
    "razdel>=0.5",
    "aiohttp>=3.10",
    "setuptools>=70",
]

[project.optional-dependencies]
full = [
    "transformers>=4.42",
    "torch>=2.3",
    "sentencepiece>=0.2",
]

[tool.uv.sources]
news-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nlp_worker"]
