[project]
name = "processor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "news-common",
    "datasketch>=1.6",
    "razdel>=0.5",
    "pymorphy3>=2.0",
    "pymorphy3-dicts-ru>=2.4",
]

[tool.uv.sources]
news-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/processor"]
