[project]
name = "telegram-collector"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "news-common",
    "telethon>=1.36",
]

[tool.uv.sources]
news-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_collector"]
