[project]
name = "vk-collector"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "news-common",
    "aiohttp>=3.10",
    "tenacity>=8.5",
]

[tool.uv.sources]
news-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vk_collector"]
